--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,9 @@
       <hr>
       <div
         style="width: 100px; height: 100px"
-        [@divState]="state"></div>
+        [@divState]="state"
+        (@divState.start)="animationStarted($event)"
+        (@divState.done)="animationEnded($event)"></div>
       <hr>
       <div
         style="width: 100px; height: 100px"
@@ -22,6 +24,7 @@
       <hr>
       <ul class="list-group">
         <li
+          [@list1]
           class="list-group-item"
           (click)="onDelete(item)"
           *ngFor="let item of list">
@@ -35,6 +38,7 @@
     <div class="col-xs-12">
       <ul class="list-group">
         <li
+          [@list2]
           class="list-group-item"
           (click)="onDelete(item)"
           *ngFor="let item of list">
